# server/router/v1/responses.go
@@ -1,0 +1,7 @@
+package v1
+
+// ModuleStars defines the HTTP response type for the total nubmer of favorites
+// for a module.
+type ModuleStars struct {
+	Total int64 `json:"total"`
+}
